Fixed paddings on mobile view

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,8 +49,8 @@ section,
   overflow-x: hidden;
 }
 section {
-  padding-left: 40px !important;
-  padding-right: 40px !important;
+  padding-left: 20px !important;
+  padding-right: 20px !important;
   box-sizing: border-box;
 }
 
